--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,7 @@
   <title>Video Board</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
     crossorigin="anonymous">
+  <script src='https://www.google.com/recaptcha/api.js' async></script>
 </head>
 
 <body>
